--- a/themes/vexo/layout/_partial/head.ejs
+++ b/themes/vexo/layout/_partial/head.ejs
@@ -10,6 +10,9 @@
       <%= config.title %>
     <% } %>
   </title>
+  <% if (is_post() && config.generator_amp){ %>
+    <link rel="amphtml" href="<%= config.url %>/<%= page.path %>/amp/index.html">
+  <% } %>
   <link href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="//cdn.bootcss.com/nprogress/0.2.0/nprogress.min.css" rel="stylesheet">
   <link href="//cdn.bootcss.com/highlight.js/9.12.0/styles/<%= theme.highlight %>.min.css" rel="stylesheet">
