--- a/themes/vexo/layout/_partial/head.ejs
+++ b/themes/vexo/layout/_partial/head.ejs
@@ -17,10 +17,10 @@
   <link href="//cdn.bootcss.com/nprogress/0.2.0/nprogress.min.css" rel="stylesheet">
   <link href="//cdn.bootcss.com/highlight.js/9.12.0/styles/<%= theme.highlight %>.min.css" rel="stylesheet">
   <%- css('css/style') %>
-  <%- css('css/plugins/gitment.css') %>
+  <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
   <script src="//cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
   <script src="//cdn.bootcss.com/geopattern/1.2.3/js/geopattern.min.js"></script>
   <script src="//cdn.bootcss.com/nprogress/0.2.0/nprogress.min.js"></script>
   <%- js('js/qrious') %>
-  <%- js('js/gitment') %>
+  <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
 </head>
