--- a/themes/vexo/layout/page.ejs
+++ b/themes/vexo/layout/page.ejs
@@ -23,7 +23,7 @@
         /*
         var disqus_config = function () {
             this.page.url = '<%- page.permalink %>';  // Replace PAGE_URL with your page's canonical URL variable
-            this.page.identifier = '<%- page.title %>'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            this.page.identifier = '<%- page.path %>'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
         };
         */
         (function() {  // REQUIRED CONFIGURATION VARIABLE: EDIT THE SHORTNAME BELOW
