--- a/themes/vexo/layout/page.ejs
+++ b/themes/vexo/layout/page.ejs
@@ -14,28 +14,21 @@
         <%- partial('_partial/tag', { tags: page.tags }) %>
       </div>
     <% } %>
-    <div id="disqus_thread"></div>
-    <script>
-        /**
-         *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-         *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
-         */
-        /*
-        var disqus_config = function () {
-            this.page.url = '<%- page.permalink %>';  // Replace PAGE_URL with your page's canonical URL variable
-            this.page.identifier = '<%- page.path %>'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-        };
-        */
-        (function() {  // REQUIRED CONFIGURATION VARIABLE: EDIT THE SHORTNAME BELOW
-            var d = document, s = d.createElement('script');
-
-            s.src = '//bayo-engineering.disqus.com/embed.js';  // IMPORTANT: Replace EXAMPLE with your forum shortname!
-
-            s.setAttribute('data-timestamp', +new Date());
-            (d.head || d.body).appendChild(s);
-        })();
+    <div id=vuukle-emote></div>
+    <div id=vuukle_div></div>
+    <script src=http://vuukle.com/js/vuukle.js type=text/javascript></script>
+    <script type=text/javascript>
+      var VUUKLE_CUSTOM_TEXT = '{ "rating_text": "Give a rating:", "comment_text_0": "Leave a comment", "comment_text_1": "comment", "comment_text_multi": "comments", "stories_title": "<%- page.title %>" }';
+      var UNIQUE_ARTICLE_ID = "<%- page.path %>";
+      var SECTION_TAGS = "<%- partial('_partial/tag', { tags: page.tags }) %>";
+      var ARTICLE_TITLE = "<%- page.title %>";
+      var GA_CODE = "UA-123456";
+      var VUUKLE_API_KEY = "f9bd7909-b0ed-487d-a4ca-2046263b33b8";
+      var TRANSLITERATE_LANGUAGE_CODE = "en";
+      var VUUKLE_COL_CODE = "148aa3";
+      var ARTICLE_AUTHORS = btoa(encodeURI('[{"name": "Bayo", "email":"info@bayo.vn","type": "internal"}]'));
+      create_vuukle_platform(VUUKLE_API_KEY, UNIQUE_ARTICLE_ID, "0", SECTION_TAGS, ARTICLE_TITLE, TRANSLITERATE_LANGUAGE_CODE, "1", "", GA_CODE, VUUKLE_COL_CODE, ARTICLE_AUTHORS);
     </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
   </article>
 </main>
 
@@ -82,5 +75,4 @@
     });
   })();
 </script>
-<script id="dsq-count-scr" src="//EXAMPLE.disqus.com/count.js" async></script>
 
