--- a/themes/vexo/layout/page.ejs
+++ b/themes/vexo/layout/page.ejs
@@ -26,7 +26,7 @@
       var VUUKLE_API_KEY = "f9bd7909-b0ed-487d-a4ca-2046263b33b8";
       var TRANSLITERATE_LANGUAGE_CODE = "en";
       var VUUKLE_COL_CODE = "148aa3";
-      var ARTICLE_AUTHORS = btoa(encodeURI('[{"name": "Bayo", "email":"info@bayo.vn","type": "internal"}]'));
+      var ARTICLE_AUTHORS = btoa(encodeURI('[{"name": "Bayo", "email":"bayo-tech@googlegroups.com","type": "internal"}]'));
       create_vuukle_platform(VUUKLE_API_KEY, UNIQUE_ARTICLE_ID, "0", SECTION_TAGS, ARTICLE_TITLE, TRANSLITERATE_LANGUAGE_CODE, "1", "", GA_CODE, VUUKLE_COL_CODE, ARTICLE_AUTHORS);
     </script>
   </article>
