--- a/themes/vexo/layout/_partial/head.ejs
+++ b/themes/vexo/layout/_partial/head.ejs
@@ -3,6 +3,7 @@
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
   <meta name="description" content="<%= config.description || theme.description %>">
   <meta name="keyword" content="<%= config.keyword || theme.keyword %>">
+  <meta name="google-site-verification" content="EwKivgdtxQDNmm_KuBpgqFgGw3pxZrIV-6fUcq-v9fU" />
   <title>
     <% if (page.title){ %>
       <%= page.title %> | <%= config.title %>
