feat: add many new things

--- a/themes/vexo/layout/page.ejs
+++ b/themes/vexo/layout/page.ejs
@@ -1,5 +1,6 @@
 <div id="article-banner">
   <h2><%- page.title %></h2>
+  <p class="post-date"><%- page.author %></p>
   <p class="post-date"><%- date(page.date, "YYYY-MM-DD") %></p>
   <div class="arrow-down">
     <a href="javascript:;"></a>
