--- a/themes/vexo/layout/_partial/head.ejs
+++ b/themes/vexo/layout/_partial/head.ejs
@@ -1,6 +1,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
+  <link rel="manifest" href="/manifest.json">
   <link href="https://www.bayo.vn/images/favicon.ico" rel="icon">
   <meta name="description" content="<%= config.description || theme.description %>">
   <meta name="keyword" content="<%= config.keyword || theme.keyword %>">
