--- a/themes/vexo/layout/_partial/footer.ejs
+++ b/themes/vexo/layout/_partial/footer.ejs
@@ -1,5 +1,10 @@
 <footer class="app-footer">
   <p class="copyright">
+    <img src="https://travis-ci.org/bayo-jsc/bayo-jsc.github.io.svg?branch=dev">
+    <img src="https://badges.greenkeeper.io/bayo-jsc/bayo-jsc.github.io.svg">
+    <img src="https://david-dm.org/bayo-jsc/bayo-jsc.github.io.svg">
+    <img src="https://img.shields.io/website-up-down-green-red/http/shields.io.svg?label=my-website">
+    <img src="https://img.shields.io/uptimerobot/ratio/7/m778918918-3e92c097147760ee39d02d36.svg">
     &copy; <%= new Date().getFullYear() %> | Proudly powered by <a href="https://hexo.io" target="_blank">Hexo</a>
     <br>
     Theme by <a href="https://github.com/yanm1ng">yanm1ng</a>
