--- a/themes/vexo/layout/_partial/footer.ejs
+++ b/themes/vexo/layout/_partial/footer.ejs
@@ -3,7 +3,7 @@
     <img src="https://travis-ci.org/bayo-jsc/bayo-jsc.github.io.svg?branch=dev">
     <img src="https://badges.greenkeeper.io/bayo-jsc/bayo-jsc.github.io.svg">
     <img src="https://david-dm.org/bayo-jsc/bayo-jsc.github.io.svg">
-    <img src="https://img.shields.io/website-up-down-green-red/http/shields.io.svg?label=my-website">
+    <img src="https://img.shields.io/website-up-down-green-red/http/shields.io.svg?label=blog.bayo.vn">
     <img src="https://img.shields.io/uptimerobot/ratio/7/m778918918-3e92c097147760ee39d02d36.svg">
     <br>
     &copy; <%= new Date().getFullYear() %> | Proudly powered by <a href="https://hexo.io" target="_blank">Hexo</a>
