--- a/themes/vexo/layout/_partial/footer.ejs
+++ b/themes/vexo/layout/_partial/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="app-footer">
   <p class="copyright">
-    <a class="github-button" href="https://github.com/bayo-jsc/bayo-jsc.github.io" data-icon="octicon-star" data-show-count="true" aria-label="Star bayo-jsc/bayo-jsc.github.io on GitHub">Star</a>
+    <a class="github-button" href="https://github.com/bayo-jsc/bayo-jsc.github.io" data-show-count="true" aria-label="Star bayo-jsc/bayo-jsc.github.io on GitHub">Star</a>
     <img src="https://travis-ci.org/bayo-jsc/bayo-jsc.github.io.svg?branch=dev">
     <img src="https://badges.greenkeeper.io/bayo-jsc/bayo-jsc.github.io.svg">
     <img src="https://david-dm.org/bayo-jsc/bayo-jsc.github.io.svg">
