--- a/themes/vexo/layout/_partial/footer.ejs
+++ b/themes/vexo/layout/_partial/footer.ejs
@@ -1,14 +1,27 @@
 <footer class="app-footer">
   <p class="copyright">
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+      <input type="hidden" name="cmd" value="_s-xclick">
+      <input type="hidden" name="hosted_button_id" value="56BE2HXV8WRMY">
+      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+      <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+    </form>
+    
+    <br>
+    
     <a class="github-button" href="https://github.com/bayo-jsc/bayo-jsc.github.io" data-show-count="true" aria-label="Star bayo-jsc/bayo-jsc.github.io on GitHub">Star</a>
     <img src="https://travis-ci.org/bayo-jsc/bayo-jsc.github.io.svg?branch=dev">
     <img src="https://badges.greenkeeper.io/bayo-jsc/bayo-jsc.github.io.svg">
     <img src="https://david-dm.org/bayo-jsc/bayo-jsc.github.io.svg">
     <img src="https://img.shields.io/website-up-down-green-red/http/shields.io.svg?label=blog.bayo.vn">
     <img src="https://img.shields.io/uptimerobot/ratio/7/m778918918-3e92c097147760ee39d02d36.svg">
+    
     <br>
+    
     &copy; <%= new Date().getFullYear() %> | Proudly powered by <a href="https://hexo.io" target="_blank">Hexo</a>
+    
     <br>
+    
     Theme by <a href="https://github.com/yanm1ng">yanm1ng</a>
   </p>
 </footer>
