--- a/themes/vexo/layout/_partial/head.ejs
+++ b/themes/vexo/layout/_partial/head.ejs
@@ -6,6 +6,7 @@
   <meta name="description" content="<%= config.description || theme.description %>">
   <meta name="keyword" content="<%= config.keyword || theme.keyword %>">
   <meta name="google-site-verification" content="EwKivgdtxQDNmm_KuBpgqFgGw3pxZrIV-6fUcq-v9fU" />
+  <%- open_graph({twitter_id: theme.twitter, google_plus: theme.google_plus, fb_admins: theme.fb_admins, fb_app_id: theme.fb_app_id}) %>
   <title>
     <% if (page.title){ %>
       <%= page.title %> | <%= config.title %>
