feat: update layout

--- a/themes/vexo/layout/project.ejs
+++ b/themes/vexo/layout/project.ejs
@@ -19,9 +19,12 @@
       success: function (data) {
         var repos = data.sort(function(a, b) {
           return (b.stargazers_count - a.stargazers_count)
-        }).slice(0, 6)
+        })
         var cardHtml = repos.map(function(item) {
           var description = item.description
+
+          if (description == null) description = ''
+          
           if (description.replace(/[\u0391-\uFFE5]/g, "aa").length > 72) {
             description = description.slice(0, 72) + '...'
           }
